# unipd-generic-work

./: .gitignore  README.md
ade-arm/: cmd_notes.txt
ade-arm/Binary_Search/: bsearch.s  main_bsearch.s
ade-arm/lab1/: abs  abs.s  add  add.s  copy_string  copy_string.s  sub  sub.s
ade-arm/lab2/: SUMLOOP  SUMLOOP.S  max  max.s
ade-arm/lab3/: find_max.s  func_sum_squares  func_sum_squares.s  main_max  main_max.s
ade-arm/lab3/bsearch/: bsearch.s  libae.s  main_bsearch  main_bsearch.s
ldp-group-assignment-2/: LICENSE  README.md  ldp_Assegnamento2.sln
ldp-group-assignment-2/ldp_Assegnamento2/: CMakeLists.txt  line_description.txt  line_description2.txt  main.cpp  timetables.txt
ldp-group-assignment-2/ldp_Assegnamento2/include/: StandardTrack.h  Station.h  StationList.h  Track.h  Train.h  TrainLine.h  TrainPQ.h  TrainTime.h  TransitTrack.h  generics.h
ldp-group-assignment-2/ldp_Assegnamento2/src/: HighSpeedTrain.cpp  RegionalTrain.cpp  StandardTrack.cpp  Station.cpp  StationList.cpp  SuperHighSpeedTrain.cpp  Track.cpp  Train.cpp  TrainLine.cpp  TrainPQ.cpp  TrainTime.cpp  TransitTrack.cpp  generics.cpp
ldp-homework/: README.md
ldp-homework/Assegnamento1/: LaserScannerDriver.cpp  LaserScannerDriver.h  main.cpp
ldp-homework/Compito1/: main.cpp  namepairs.cpp  namepairs.h
ldp-homework/Compito2/: main.cpp
ldp-homework/Compito3/: DoubleVector.cpp  DoubleVector.h  Rational.cpp  Rational.h  main.cpp
ldp-homework/Laboratorio1/: Book.cpp  Book.h  main.cpp  main2.cpp  namepairs.cpp  namepairs.h
ldp-homework/Laboratorio2/: Rational.cpp  Rational.h  main.cpp
ldp-homework/Laboratorio3/: doubleVector.cpp  doubleVector.h  main.cpp
ldp-homework/Laboratorio4/: main.cpp
ldp-homework/Laboratorio5/: CMakeLists.txt  Controller.cpp  Controller.h  Iterator.h  LevelController.cpp  LevelController.h  List_iterator.cpp  List_iterator.h  PrintController.cpp  PrintController.h  Shape.h  Vector_iterator.cpp  Vector_iterator.h  main.cpp
ldp-homework/Laboratorio6/: 10_STL_Alg.txt  CMakeLists.txt  Parallelogram.cpp  Parallelogram.h  Rect.cpp  Rect.h  Rhombus.cpp  Rhombus.h  Shape.h  Square.cpp  Square.h  main.cpp
